welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:1: error: not found: type boolean
def fin() : boolean = {
            ^